; ModuleID = '/home/carl/AnghaBench/micropython/lib/littlefs/extr_lfs2.c_lfs2_dir_getgstate.c'
source_filename = "/home/carl/AnghaBench/micropython/lib/littlefs/extr_lfs2.c_lfs2_dir_getgstate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lfs2_gstate = type { i32 }

@LFS2_TYPE_MOVESTATE = common dso_local global i32 0, align 4
@LFS2_ERR_NOENT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, %struct.lfs2_gstate*)* @lfs2_dir_getgstate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lfs2_dir_getgstate(i32* %0, i32* %1, %struct.lfs2_gstate* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.lfs2_gstate*, align 8
  %8 = alloca %struct.lfs2_gstate, align 4
  %9 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store %struct.lfs2_gstate* %2, %struct.lfs2_gstate** %7, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = call i32 @LFS2_MKTAG(i32 2047, i32 0, i32 0)
  %13 = load i32, i32* @LFS2_TYPE_MOVESTATE, align 4
  %14 = call i32 @LFS2_MKTAG(i32 %13, i32 0, i32 4)
  %15 = call i64 @lfs2_dir_get(i32* %10, i32* %11, i32 %12, i32 %14, %struct.lfs2_gstate* %8)
  store i64 %15, i64* %9, align 8
  %16 = load i64, i64* %9, align 8
  %17 = icmp slt i64 %16, 0
  br i1 %17, label %18, label %25

18:                                               ; preds = %3
  %19 = load i64, i64* %9, align 8
  %20 = load i64, i64* @LFS2_ERR_NOENT, align 8
  %21 = icmp ne i64 %19, %20
  br i1 %21, label %22, label %25

22:                                               ; preds = %18
  %23 = load i64, i64* %9, align 8
  %24 = trunc i64 %23 to i32
  store i32 %24, i32* %4, align 4
  br label %34

25:                                               ; preds = %18, %3
  %26 = load i64, i64* %9, align 8
  %27 = load i64, i64* @LFS2_ERR_NOENT, align 8
  %28 = icmp ne i64 %26, %27
  br i1 %28, label %29, label %33

29:                                               ; preds = %25
  %30 = call i32 @lfs2_gstate_fromle32(%struct.lfs2_gstate* %8)
  %31 = load %struct.lfs2_gstate*, %struct.lfs2_gstate** %7, align 8
  %32 = call i32 @lfs2_gstate_xor(%struct.lfs2_gstate* %31, %struct.lfs2_gstate* %8)
  br label %33

33:                                               ; preds = %29, %25
  store i32 0, i32* %4, align 4
  br label %34

34:                                               ; preds = %33, %22
  %35 = load i32, i32* %4, align 4
  ret i32 %35
}

declare dso_local i64 @lfs2_dir_get(i32*, i32*, i32, i32, %struct.lfs2_gstate*) #1

declare dso_local i32 @LFS2_MKTAG(i32, i32, i32) #1

declare dso_local i32 @lfs2_gstate_fromle32(%struct.lfs2_gstate*) #1

declare dso_local i32 @lfs2_gstate_xor(%struct.lfs2_gstate*, %struct.lfs2_gstate*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
